src/objects/Hardware__c.object
<CustomObject>
    <fields>
        <fullName>AssignedToEmployee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assigned to employee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hardware</relationshipLabel>
        <relationshipName>Hardware</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageFormula__c</fullName>
        <formula>IMAGE(ImageUrl__c,&quot;Not Available&quot;,100,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ImageFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageUrl__c</fullName>
        <label>ImageUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>InvNo__c</fullName>
        <label>MB/SN/ServerTag</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Hardware</relationshipLabel>
        <relationshipName>Hardware</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Hardware__c</referenceTo>
        <relationshipLabel>Hardware</relationshipLabel>
        <relationshipName>Hardware</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Hardware</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hardware Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hardware</pluralLabel>
    <recordTypes>
        <fullName>CPU</fullName>
        <active>true</active>
        <label>CPU</label>
    </recordTypes>
    <recordTypes>
        <fullName>HDD</fullName>
        <active>true</active>
        <label>HDD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Keyboard</fullName>
        <active>true</active>
        <label>Keyboard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monitor</fullName>
        <active>true</active>
        <label>Monitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Motherboard</fullName>
        <active>true</active>
        <label>Motherboard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mouse</fullName>
        <active>true</active>
        <label>Mouse</label>
    </recordTypes>
    <recordTypes>
        <fullName>Notebook</fullName>
        <active>true</active>
        <label>Notebook</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC</fullName>
        <active>true</active>
        <label>PC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Power_supply_unit</fullName>
        <active>true</active>
        <label>Power supply unit</label>
    </recordTypes>
    <recordTypes>
        <fullName>RAM</fullName>
        <active>true</active>
        <label>RAM</label>
    </recordTypes>
    <recordTypes>
        <fullName>SSD</fullName>
        <active>true</active>
        <label>SSD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Server</fullName>
        <active>true</active>
        <label>Server</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ventil</fullName>
        <active>true</active>
        <label>Ventil</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>